--- a/index.html
+++ b/index.html
@@ -420,14 +420,58 @@
 </body>
 <script src="./plugins/validator/validator.js"></script>
 <script>
-    const  valid = new Validator ({
-        selector: '#form3',
+    const  valid1 = new Validator ({
+        selector: '#form1',
         pattern: {
             // phone: /^\+380\d{7}$/,
            // zip: /\d{5,6}/
         },
         method: {
-            'phone': [
+            'form1-phone': [
+                ['notEmpty'],
+                ['pattern', 'phone']
+            ],
+            'form1-email': [
+                ['notEmpty'],
+                ['pattern', 'email']
+            ],
+            'form1-name': [
+                ['notEmpty'],
+                ['pattern', 'nameAndText']
+            ],
+        }
+    });
+    valid1.init();
+
+    const  valid2 = new Validator ({
+        selector: '#form2',
+        pattern: {},
+        method: {
+            'form2-phone': [
+                ['notEmpty'],
+                ['pattern', 'phone']
+            ],
+            'form2-email': [
+                ['notEmpty'],
+                ['pattern', 'email']
+            ],
+            'form2-name': [
+                ['notEmpty'],
+                ['pattern', 'nameAndText']
+            ],
+            'form2-message': [
+                ['notEmpty'],
+                ['pattern', 'nameAndText']
+            ],
+        }
+    });
+    valid2.init();
+
+    const  valid3 = new Validator ({
+        selector: '#form3',
+        pattern: {},
+        method: {
+            'form3-phone': [
                 ['notEmpty'],
                 ['pattern', 'phone']
             ],
@@ -435,8 +479,13 @@
                 ['notEmpty'],
                 ['pattern', 'email']
             ],
+            'form3-name': [
+                ['notEmpty'],
+                ['pattern', 'nameAndText']
+            ],
+
         }
     });
-    valid.init();
+    valid3.init();
 </script>
 </html>
