lesson 19-20, first commit

--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
         </div>
     </div>
 
-<script src="./scripts/sctipt.js"></script>
+<script src="./src/index.js"></script>
 </body>
 <script src="./plugins/validator/validator.js"></script>
 <script>
