--- a/index.html
+++ b/index.html
@@ -407,8 +407,7 @@
                             placeholder="Ваш номер телефона" required>
                     </div>
 
-                        <input type="email" class="form-email" id="form3-email" name="user_email"
-                            placeholder="Ваш E-mail">
+                    <input type="email" class="form-email" id="form3-email" name="user_email" placeholder="Ваш E-mail">
 
                     <button class="btn form-btn" type="submit">Оставить заявку!</button>
                 </form>
@@ -416,10 +415,10 @@
         </div>
     </div>
 
-<script src="./src/index.js"></script>
+    <script src="./dist/main.js"></script>
 </body>
 <script src="./plugins/validator/validator.js"></script>
-<script>
+<!-- <script>
     const  valid1 = new Validator ({
         selector: '#form1',
         pattern: {
@@ -487,5 +486,6 @@
         }
     });
     valid3.init();
-</script>
+</script> -->
+
 </html>
